[docs] 서비스 워커 수정

--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <script>
+  <!-- <script>
     window.onload = function () {
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('service-worker.js').then((reg) => console.log('Service worker registered.',
           reg));
       }
     };
-  </script>
+  </script> -->
   <title>React App</title>
 </head>
 
