--- a/public/index.html
+++ b/public/index.html
@@ -12,50 +12,32 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>React App</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
-
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
-
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
-
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
   <script>
     let swRegist = null;
     let isSubscribed = true;
-
     Notification.requestPermission().then(function (permission) {
       // if ("serviceWorker" in navigator) {
       if (Notification.permission === "granted") {
@@ -63,7 +45,7 @@
           .register("./sw.js") // 서비스워커 등록 public에 있는 sw.js 의 경로로 등록해줌
           .then((regist) => {
             swRegist = regist;
-            test(swRegist)
+            test(swRegist);
             console.log("권한 승인해서 서비스워커 등록!");
             console.log(swRegist);
           }); // 권한 허용이 되었다면 실행
@@ -76,14 +58,9 @@
       }
       // }
     });
-
-
-
-
     const test = (swRegist) => {
-      console.log(swRegist)
+      console.log(swRegist);
       swRegist = swRegist;
-
       const initPush = (isSubscribed) => {
         console.log(swRegist);
         // const pushButton = document.getElementById("subscribe");
@@ -99,22 +76,21 @@
         console.log(swRegist);
         swRegist.pushManager.getSubscription().then(function (subscription) {
           isSubscribed = !(subscription ===
-          null); // null 이면 true 이니 !true 가 false 로 해서 isSubscribed 가 false 라는뜻
+            null); // null 이면 true 이니 !true 가 false 로 해서 isSubscribed 가 false 라는뜻
           updateSubscription(subscription); // updateSubscription 함수로 구독 정보를 전달
-
           if (isSubscribed) {
             console.log("User IS subscribed.");
           } else {
             console.log("User is NOT subscribed.");
           }
-
           updateButton();
         });
 
         function subscribe() {
           let appServerPublicKey =
-            "INSERT PUBLIC KEY"; // 자신의 public key 넣어줘야함
-          const applicationServerKey = urlBase64ToUint8Array(appServerPublicKey);
+            "BLMva_OQ7GHao3Jor8ljRKjmk6MmOEkI6OHbaLRlxklR8A89NQyQ7HCHYm20gyUmGM8uB92cnQX3tc5AHp42Pgg"; // 자신의 public key 넣어줘야함
+          const applicationServerKey =
+            urlBase64ToUint8Array(appServerPublicKey);
           swRegist.pushManager
             .subscribe({
               userVisibleOnly: true,
@@ -132,22 +108,18 @@
               updateButton();
             });
         }
-
         //구독 버튼 상태 갱신
         function updateButton() {
           // TODO: 알림 권한 거부 처리
           if (Notification.permission === "granted") {
             // 권한 허용이 되었다면 실행
-
             // new Notification("푸시허용 테스트 알림!!"); // 알림 내용 그대로 보여줌
           }
           if (Notification.permission === "denied") {
             // 권한 차단 했을경우 실행
-
             updateSubscription(null);
             return;
           }
-
           // const pushButton = document.getElementById("subscribe");
           if (isSubscribed) {
             // pushButton.textContent = "Disable Push Messaging";
@@ -156,13 +128,10 @@
           }
           // pushButton.disabled = false; // true로하면 해당 버튼이 안눌리고 비활성화 된다.
         }
-
         // 구독 정보 갱신
         function updateSubscription(subscription) {
           // TODO: 구독 정보 서버로 전송
-
           // let detailArea = document.getElementById("subscription_detail");
-
           if (subscription) {
             console.log(JSON.stringify(subscription));
             // detailArea.innerText = JSON.stringify(subscription);
@@ -171,7 +140,6 @@
             // detailArea.parentElement.classList.add("hide");
           }
         }
-
         //알림 구독 취소
         function unsubscribe() {
           swRegist.pushManager
@@ -197,25 +165,17 @@
           var base64 = (base64String + padding)
             .replace(/\-/g, "+")
             .replace(/_/g, "/");
-
           var rawData = window.atob(base64);
           var outputArray = new Uint8Array(rawData.length);
-
           for (var i = 0; i < rawData.length; ++i) {
             outputArray[i] = rawData.charCodeAt(i);
           }
           return outputArray;
         }
-
-
       };
-
-
-      initPush()
-    }
+      initPush();
+    };
   </script>
-
-
 </body>
 
 </html>
