--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
         function subscribe() {
           let appServerPublicKey =
-            "BLMva_OQ7GHao3Jor8ljRKjmk6MmOEkI6OHbaLRlxklR8A89NQyQ7HCHYm20gyUmGM8uB92cnQX3tc5AHp42Pgg"; // 자신의 public key 넣어줘야함
+            "[insert serverKey]"; // 자신의 public key 넣어줘야함
           const applicationServerKey =
             urlBase64ToUint8Array(appServerPublicKey);
           swRegist.pushManager
