--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" sizes="192x192" href="logo192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="logo512.png">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
