--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,32 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+
+
+
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyBHpknHwT99Y6l4OPhZhShtMql4OVzL968",
+        authDomain: "push-e53ad.firebaseapp.com",
+        projectId: "push-e53ad",
+        storageBucket: "push-e53ad.appspot.com",
+        messagingSenderId: "496302701496",
+        appId: "1:496302701496:web:5c79f13992451572c4ad4d",
+        measurementId: "G-PCQK3HYY0G",
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  // firebase.analytics();
+</script> -->
+
+    <!-- <script>
       let swRegist = null;
       let isSubscribed = true;
       Notification.requestPermission().then(function (permission) {
@@ -91,7 +116,8 @@
           });
 
           function subscribe() {
-            let appServerPublicKey = "[insert serverKey]"; // 자신의 public key 넣어줘야함
+            let appServerPublicKey =
+              "BCx9jhZ9DcQIfH1TxwGxM_20aQMEdV_SbEsrBT-KCKOFUPlbAQ4nrgbnH3nBsaR8tGib2kHtxTKUE1SGdSatZ7w"; // 자신의 public key 넣어줘야함
             const applicationServerKey =
               urlBase64ToUint8Array(appServerPublicKey);
             swRegist.pushManager
@@ -137,6 +163,41 @@
             // let detailArea = document.getElementById("subscription_detail");
             if (subscription) {
               console.log(JSON.stringify(subscription));
+              //             return fetch(`https://www.zzzback.shop/api/subscription`, {
+              //   method: 'POST',
+              //   body: JSON.stringify({
+              //     subscription:subscription,
+              //     title:"Notified by Precision Ordance",
+              //     description:"someone buy a product",
+              //     icon:"https://ichef.bbci.co.uk/news/976/cpsprodpb/9A50/production/_118740593_gettyimages-1231144196.jpg"
+              //   }),
+              //   headers: {
+              //     'Content-Type': 'application/json'
+              //   }
+              // })
+
+              axios
+                .post(
+                  "https://www.zzzback.shop/api/notifications/subscribe",
+                  {
+                    body: JSON.stringify({
+                      subscription: subscription,
+                      title: "Notified by Precision Ordance",
+                      description: "someone buy a product",
+                      icon: "https://ichef.bbci.co.uk/news/976/cpsprodpb/9A50/production/_118740593_gettyimages-1231144196.jpg",
+                    }),
+                  },
+                  {
+                    headers: {
+                      "Content-Type": "application/json",
+                    },
+                  }
+                )
+                .then((res) => {
+                  console.log(res);
+                  console.log("Dd");
+                });
+
               // detailArea.innerText = JSON.stringify(subscription);
               // detailArea.parentElement.classList.remove("hide");
             } else {
@@ -178,6 +239,34 @@
         };
         initPush();
       };
+
+            function sendSubscription(subscription) {
+        return fetch(`/notifications/subscribe`, {
+          method: 'POST',
+          body: JSON.stringify({
+            subscription:subscription,
+            title:"Notified by Precision Ordance",
+            description:"someone buy a product",
+            icon:"https://ichef.bbci.co.uk/news/976/cpsprodpb/9A50/production/_118740593_gettyimages-1231144196.jpg"
+          }),
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        })
+      } -->
+
+      // axios
+      //           .post(
+      //             "https://www.zzzback.shop/api/login",
+      //             { userId:"youngble", password:"Youngble1!" },
+      //             {
+      //               headers: {
+      //                 "Content-Type": "application/json",
+      //                 "Authorization": `Bearer ${localStorage.getItem("token")}`
+      //               },
+      //             }
+      //           )
+      //           .then((res) => { console.log("Dd")});
     </script>
   </body>
 </html>
