[docs] 푸쉬알림 진행과정fcm 주석처리

--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@
         })
       } -->
 
-      // axios
+      <!-- // axios
       //           .post(
       //             "https://www.zzzback.shop/api/login",
       //             { userId:"youngble", password:"Youngble1!" },
@@ -266,7 +266,7 @@
       //               },
       //             }
       //           )
-      //           .then((res) => { console.log("Dd")});
+      //           .then((res) => { console.log("Dd")}); -->
     </script>
   </body>
 </html>
