[docs] 마이페이지 예외 처리 추가 (토큰이 없거나, IOS 일 때 알림 요청 X)

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <script
+      type="text/javascript"
+      src="https://developers.kakao.com/sdk/js/kakao.js"
+    ></script>
+    <script>
+      Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
+    </script>
     <title>React App</title>
   </head>
 
@@ -42,9 +49,6 @@
     -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
-
-
 
     <!-- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
@@ -255,7 +259,7 @@
         })
       } -->
 
-      <!-- // axios
+    <!-- // axios
       //           .post(
       //             "https://www.zzzback.shop/api/login",
       //             { userId:"youngble", password:"Youngble1!" },
@@ -267,10 +271,6 @@
       //             }
       //           )
       //           .then((res) => { console.log("Dd")}); -->
-    </script>
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script>
-      Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
-    </script>
+    <!-- </script> -->
   </body>
 </html>
