--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,16 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="apple-touch-icon" sizes="192x192" href="logo192.png" />
-  <link rel="apple-touch-icon" sizes="512x512" href="logo512.png" />
-  <!-- Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`. -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   <script>
     Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
   </script>
-
+  <!-- manifest -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" sizes="192x192" href="logo192.png" />
+  <link rel="apple-touch-icon" sizes="512x512" href="logo512.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-05KE6WCMTW"></script>
   <script>
