--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <script
+      type="text/javascript"
+      src="https://developers.kakao.com/sdk/js/kakao.js"
+    ></script>
+    <script>
+      Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
+    </script>
+    <!-- manifest -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" sizes="192x192" href="logo192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="logo512.png" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-05KE6WCMTW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-  <script>
-    Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
-  </script>
-  <!-- manifest -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="apple-touch-icon" sizes="192x192" href="logo192.png" />
-  <link rel="apple-touch-icon" sizes="512x512" href="logo512.png" />
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-05KE6WCMTW"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+      gtag("config", "G-05KE6WCMTW");
+    </script>
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+    <title>React App</title>
+  </head>
 
-    gtag('config', 'G-05KE6WCMTW');
-  </script>
-
-  <title>React App</title>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <!-- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js">
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js">
     </script>
     =======
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
@@ -73,7 +71,7 @@
   // firebase.analytics();
 </script> -->
 
-  <!-- <script>
+    <!-- <script>
       let swRegist = null;
       let isSubscribed = true;
       Notification.requestPermission().then(function (permission) {
@@ -263,7 +261,7 @@
         })
       } -->
 
-  <!-- // axios=======// axios>>>>>>> 8e90bf36f683007ccaf52138359d495c539a1613
+    <!-- // axios=======// axios>>>>>>> 8e90bf36f683007ccaf52138359d495c539a1613
       // .post(
       // "https://www.zzzback.shop/api/login",
       // { userId:"youngble", password:"Youngble1!" },
@@ -275,17 +273,11 @@
       // }
       // )
       // .then((res) => { console.log("Dd")}); -->
-  <!-- </script> -->
-  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-  <script>
-    Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
-  </script>
-  <script type="module" src="firebase-messaging-sw.js"></script>
-</body>
-
-</html>
-
-<!-- </script> -->
-</body>
-
+    <!-- </script> -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+      Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
+    </script>
+    <script type="module" src="firebase-messaging-sw.js"></script>
+  </body>
 </html>
