[docs] 인앱브라우저 크롬으로

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,17 @@
     <div id="root"></div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- <a href="intent://scan/#Intent;scheme=zxing;package=com.android.chrome;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end"> Take a QR code </a> -->
+    <!-- <script>window.open("intent://www.naver.com#Intent;scheme=http;package=com.android.chrome;end");</script> -->
+    <!-- <script> location.href='intent://www.zzzapp.co.kr#Intent;scheme=http;package=com.android.chrome;end' </script> -->
+<!-- <script>
+  // var win = window.open("http://www.zzzapp.co.kr/", "PopupWin", "width=100vw,height=100vh");
+
+// win.document.write("<p>새창에 표시될 내용 입니다.</p>");
+</script> -->
+
+
+
     <!-- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js">
     </script>
     =======
