--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <script
-      type="text/javascript"
-      src="https://developers.kakao.com/sdk/js/kakao.js"
-    ></script>
-    <script>
-      Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
-    </script>
-    <!-- manifest -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="apple-touch-icon" sizes="192x192" href="logo192.png" />
-    <link rel="apple-touch-icon" sizes="512x512" href="logo512.png" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-05KE6WCMTW"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
 
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta property="og:title" content="Zzz" />
+  <meta property="og:description" content="잠이 드는 시간 Zzz" />
+  <!-- <meta property="og:image" content="{{ url_for('public', filename='ogimage.jpg') }}" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#101340" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script>
+    Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
+  </script>
+  <!-- manifest -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" sizes="192x192" href="logo192.png" />
+  <link rel="apple-touch-icon" sizes="512x512" href="logo512.png" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-05KE6WCMTW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-      gtag("config", "G-05KE6WCMTW");
-    </script>
-    <title>Zzz</title>
-  </head>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <!-- <a href="intent://scan/#Intent;scheme=zxing;package=com.android.chrome;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end"> Take a QR code </a> -->
-    <!-- <script>window.open("intent://www.naver.com#Intent;scheme=http;package=com.android.chrome;end");</script> -->
-    <!-- <script> location.href='intent://www.zzzapp.co.kr#Intent;scheme=http;package=com.android.chrome;end' </script> -->
-    <!-- <script>
+    gtag("config", "G-05KE6WCMTW");
+  </script>
+  <title>Zzz</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <!-- <a href="intent://scan/#Intent;scheme=zxing;package=com.android.chrome;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end"> Take a QR code </a> -->
+  <!-- <script>window.open("intent://www.naver.com#Intent;scheme=http;package=com.android.chrome;end");</script> -->
+  <!-- <script> location.href='intent://www.zzzapp.co.kr#Intent;scheme=http;package=com.android.chrome;end' </script> -->
+  <!-- <script>
   // var win = window.open("http://www.zzzapp.co.kr/", "PopupWin", "width=100vw,height=100vh");
 
 // win.document.write("<p>새창에 표시될 내용 입니다.</p>");
 </script> -->
 
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js">
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js">
     </script>
     =======
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
@@ -79,7 +72,7 @@
   // firebase.analytics();
 </script> -->
 
-    <!-- <script>
+  <!-- <script>
       let swRegist = null;
       let isSubscribed = true;
       Notification.requestPermission().then(function (permission) {
@@ -269,7 +262,7 @@
         })
       } -->
 
-    <!-- // axios=======// axios>>>>>>> 8e90bf36f683007ccaf52138359d495c539a1613
+  <!-- // axios=======// axios>>>>>>> 8e90bf36f683007ccaf52138359d495c539a1613
       // .post(
       // "https://www.zzzback.shop/api/login",
       // { userId:"youngble", password:"Youngble1!" },
@@ -281,11 +274,12 @@
       // }
       // )
       // .then((res) => { console.log("Dd")}); -->
-    <!-- </script> -->
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script>
-      Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
-    </script>
-    <script type="module" src="firebase-messaging-sw.js"></script>
-  </body>
+  <!-- </script> -->
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script>
+    Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
+  </script>
+  <script type="module" src="firebase-messaging-sw.js"></script>
+</body>
+
 </html>
