--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta property="og:title" content="잠이 드는 시간 Zzz" />
   <meta property="og:description" content="잠에 쉽게 들지 못한다면 마음에 안정을 주는 ASMR 듣고 수면 기록도 매일 남겨봐요!" />
-  <!-- <meta property="og:image" content="{{ url_for('public', filename='ogimage.jpg') }}" /> -->
+  <meta property="og:image" content="{{ url_for('public', filename='ogimage.png') }}" />
   <meta name="theme-color" content="#101340" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="잠에 쉽게 들지 못한다면 마음에 안정을 주는 ASMR 듣고 수면 기록도 매일 남겨봐요!" />
-  <!-- kakao -->
-  <script type=" text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js">
-  </script>
-  <script>
-    Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
-  </script>
+
   <!-- manifest -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="apple-touch-icon" sizes="192x192" href="logo192.png" />
@@ -36,12 +31,14 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>스크립트가 차단되어, 이 사이트의 기능을 이용할 수 없습니다.</noscript>
   <div id="root"></div>
+  <!-- kakao -->
   <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   <script>
     Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
   </script>
+  <!-- FCM -->
   <script type="module" src="firebase-messaging-sw.js"></script>
 </body>
 
