--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta property="og:title" content="잠이 드는 시간 Zzz" />
   <meta property="og:description" content="잠에 쉽게 들지 못한다면 마음에 안정을 주는 ASMR 듣고 수면 기록도 매일 남겨봐요!" />
-  <meta property="og:image" content="{{ url_for('public', filename='ogimage.png') }}" />
+  <meta property="og:image" content="%PUBLIC_URL%/ogimage.png" />
   <meta name="theme-color" content="#101340" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="잠에 쉽게 들지 못한다면 마음에 안정을 주는 ASMR 듣고 수면 기록도 매일 남겨봐요!" />
