--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,16 @@
   <meta name="theme-color" content="#101340" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="잠에 쉽게 들지 못한다면 마음에 안정을 주는 ASMR 듣고 수면 기록도 매일 남겨봐요!" />
+
   <!-- manifest -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-startup-image" href="logo192.png" />
   <link rel="apple-touch-icon" sizes="192x192" href="logo192.png" />
   <link rel="apple-touch-icon" sizes="512x512" href="logo512.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="Zzz" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#101340" />
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-05KE6WCMTW"></script>
   <script>
