[test] 소셜 로그인 로딩 속도 수정

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     >
     <div id="root"></div>
     <!-- kakao -->
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script>
       Kakao.init("c51fcbffb9ee44d3b90e755eff2bf5b6");
     </script>
